Fix footer links wrong colour on hover

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -4,7 +4,7 @@
   color: #f5d5e1;
 }
 
-.footer a {
+footer.footer a {
   color: #f5d5e1;
 }
 
